Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectObject.quorum
class Main
    action Main
        Object v = Test()
        output "passed"
    end

    action Test() returns Object
        Object var
        return var
    end
end