Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(integer var)
    end
end
